# document-mcp

./: .env.example  .gitignore  INGESTION_GUIDE.md  INTEGRATION_STATUS.md  QUICKSTART.md  README.md  REAL_BACKEND_SETUP.md  RESET_POSTGRES_PASSWORD.md  alembic.ini  create_user.sql  docker-compose.yml  pyproject.toml  query  requirements.txt  reset_and_setup.py  reset_postgres_password.bat  run.bat  search_engine.py  setup_db.bat  setup_db.py  setup_db_17.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_agent_actions_table.py
config/: disciplines.yaml  models.yaml  validation_rules.yaml
docker/: Dockerfile
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts  vite-env.d.ts
frontend/src/screens/: AskScreen.tsx  DocumentsScreen.tsx  UploadScreen.tsx
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_enable_pgvector.py  0003_seed_validation_rules.py
scripts/: ingest_documents.py  ingest_documents_sqlite.py  verify_ingestion.py
src/: main.py  main_simple.py
src/api/: __init__.py  schemas.py
src/api/routers/: __init__.py  admin.py  documents.py  review.py  search.py  upload.py  validation.py  websocket.py
src/common/: __init__.py  audit.py  constants.py  exceptions.py  hashing.py
src/config/: __init__.py  settings.py
src/db/: __init__.py  models.py  session.py
src/docintel/: main.py
src/docintel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/docintel/api/: routes.py
src/docintel/common/: constants.py  exceptions.py  logging.py
src/docintel/config/: settings.py
src/docintel/db/: models.py  seed.py  session.py
src/docintel/docon/: connector.py  gateway.py  mock_connector.py
src/docintel/embeddings/: local_embedder.py
src/docintel/extractors/: docx_extractor.py  dwg_extractor.py  dxf_extractor.py  pdf_extractor.py  pptx_extractor.py  xlsx_extractor.py
src/docintel/ingestion/: dispatcher.py  pipeline.py
src/docintel/llm/: guards.py  local_client.py
src/docintel/mcp_server/: server.py  tools.py
src/docintel/ocr/: paddle_engine.py  tesseract_engine.py  text_layer.py
src/docintel/parser/: deterministic.py  llm_extractor.py  merge.py  schema.py
src/docintel/retrieval/: chunker.py  indexer.py  qa.py  search.py
src/docintel/validation/: reference_rules.py  rule_engine.py  violations.py
src/embeddings/: __init__.py  chunking.py  encoder.py
src/ingestion/: __init__.py  cad_extractor.py  image_extractor.py  office_extractor.py  orchestrator.py  pdf_extractor.py  router.py
src/llm/: __init__.py  client.py
src/mcp/: __init__.py  server.py
src/ocr/: __init__.py  confidence.py  engine.py
src/parser/: __init__.py  deterministic.py  llm_extractor.py  merge.py
src/search/: __init__.py  hybrid.py  qa.py
src/storage/: __init__.py  files.py
src/submission/: __init__.py  docon_client.py
src/validation/: __init__.py  gateway.py  rejection.py
