[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-doc-control"
version = "0.1.0"
description = "Fully offline, on-premise engineering document-control knowledge base with MCP server"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "Proprietary"}
authors = [
    {name = "Engineering Document Control Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Engineering",
    "Programming Language :: Python :: 3.14",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py314']

[tool.ruff]
line-length = 100
target-version = "py314"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]